--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
     margin-right: 2vw;
     font-size: 5vh;
     color: #2d2e2f;
+    text-decoration: none;
 }
 
 .link-card {
@@ -40,15 +41,30 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 2vw;
-    margin-right: 2vw;
     padding: 1rem;
     color: #2d2e2f;
-    box-shadow: 4px 4px 6px rgba(0,0,0,0.8);
+    box-shadow: 0px 24px 38px 3px rgba(0,0,0,0.14) , 0px 9px 46px 8px rgba(0,0,0,0.12) , 0px 11px 15px -7px rgba(0,0,0,0.2) ;
     border-radius: 1rem;
 }
 
 .card-picture {
     width: 25vw;
     height: 25vh;
+    margin-bottom: 2vh;
+    border: 2px solid black;
+}
+
+.underline {
+    width: 50%;
+    margin-bottom: 2vh;
+    padding: 0;
+}
+
+.underline-sm {
+    width: 30%;
+}
+
+h2 {
+    margin: 0;
+    padding: 0;
 }
