--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,19 @@
 
 body {
     font-family: 'Roboto', sans-serif;
+    text-shadow: 4px 4px 10px rgba(0,0,0,0.4);
 }
 
 a {
     text-decoration: none;
+}
+
+header a {
+    color: black;
+}
+
+section a {
+    color: white;
 }
 
 header {
@@ -30,6 +39,7 @@ header nav {
 
 header nav li {
     display: inline;
+    margin: 2vw;
 }
 
 
@@ -39,7 +49,13 @@ section {
     color: white;
 }
 
+section h2 {
+    font-size: 32px;
+}
 
+section h3 {
+    font-size: 25px;
+}
 
 .home {
     background: linear-gradient(to right top, #FF4E50,#F9D423)
@@ -51,42 +67,42 @@ section {
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 64px;
-    text-shadow: 4px 4px 10px rgba(0,0,0,0.4);
 }
 
 
 
 
 
-.projects {
+.pathfinder {
     background: linear-gradient(to right top, #8360c3, #2ebf91);
 }
 
-.projects h1 {
+.pathfinder h1 {
+    position: absolute;
+    top: 120%;
+    left: 50%;
+    transform: translate(-50%, -120%);
+    font-size: 48px;
+}
+
+
+
+.pathfinder img {
     position: absolute;
     top: 130%;
     left: 50%;
-    transform: translate(-50%, -130%);
-    font-size: 48px;
-    text-shadow: 4px 4px 10px rgba(0,0,0,0.4);
+    width: 45vw;
 }
 
-.card-group {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 100vh;
-}
-
-.card {
-    background: white;
-    color: black;
-    padding: 2%;
-    border-radius: 20px;
-    box-shadow: 5px 8px 10px rgba(0,0,0,0.4);
+.info {
+    position: absolute;
+    top: 130%;
+    left: 10%;
+    width: 45vw;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: space-around;
+    height: 50vh;
 }
 
 .card h3 {
@@ -101,7 +117,6 @@ section {
     position: absolute;
     top: 230%;
     left: 50%;
-    transform: translate(-50%, -230%);
+    transform: translate(-50%, -330%);
     font-size: 48px;
-    text-shadow: 4px 4px 10px rgba(0,0,0,0.4);
 }
